[build-system]
build-backend = "poetry.core.masonry.api"

requires = [ "poetry-core>=1" ]

[project]
name = "aqt-connector"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "Alpine Quantum Technologies GmbH", email = "support.arnica@aqt.eu" },
]
requires-python = ">=3.9,<3.14"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "auth0-python>=4.7.2,<5",
  "httpx>=0.27.2,<1",
  "pydantic>=2.10,<3",
  "qrcode>=8,<9",
  "tomli>=2.1,<3",
  "typer>=0.13,<1",
]
packages = [
  { include = "aqt_connector" },
  { include = "tests", format = "sdist" },
]

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
ruff = "^0.9.9"
typos = "^1.30.1"
pyproject-fmt = "^2.5.1"

[tool.poetry.group.test.dependencies]
pytest-playwright = "^0.7.0"
interrogate = "^1.7.0"

[tool.poetry.group.docs.dependencies]
pdoc3 = "^0.11.5"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

lint.select = [
  # flake8-bugbear
  "B",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
]
